# mdciao

./: Gunnar_utils.py  README.md  README.rst  actor_utils.py  command_line_tools.py  example_call_of_residue_neighborhoods.txt  input.txt  pyproject.toml  requirements.txt  residue_neighborhoods.py  run_tests.py  setup.py  sites.py  sofi_functions.py  sofi_tests.py
.github/ISSUE_TEMPLATE/: bug-report---unexpected-beavior.md  bug-report.md
.github/workflows/: python-package.macos.yml  python-package.yml
doc/: FAQ.rst  TODOs.rst  aa_utils.rst  actor_utils.rst  api_note.rst  api_stub.rst  basic_usage.rst  bond_utils.rst  cli_stub.rst  conf.py  contacts.rst  fragment_overview.rst  fragments.rst  gallery.rst  getting_started.rst  highlights.rst  index.rst  installation.rst  interface_ctc_analyzer.rst  list_utils.rst  mdc_BW_overview.rst  mdc_CGN_overview.rst  mdc_compare.rst  mdc_compare_neighborhoods.rst  mdc_fragments.rst  mdc_interface.rst  mdc_neighborhoods.rst  mdc_sites.rst  nomenclature_utils.rst  overview.rst  residue_neighborhoods.rst  sequence_utils.rst  sites.rst  sofi_functions.rst
doc/api/: api.rst  contacts.rst  flare.rst  fragments.rst  nomenclature.rst
doc/cli_cli/: cli_cli.rst  mdc_BW_overview.rst  mdc_CGN_overview.rst  mdc_GPCR_overview.rst  mdc_KLIFS_overview.rst  mdc_compare.rst  mdc_fragments.rst  mdc_interface.rst  mdc_neighborhoods.rst  mdc_notebooks.rst  mdc_pdb.rst  mdc_residues.rst  mdc_sites.rst
doc/utils/: utils.rst
examples/: 3SN6.txt  GPCRmd_B2AR_nomenclature.xlsx  example_call_of_interface_ctc_analyzer.txt  example_call_of_residue_neighborhoods.txt  example_call_of_sites.txt  input.txt  run1_stride_200.xtc  run2_stride_200.xtc  site_F.json
files_for_consensus_naming/: BW.json  CGN_3SN6.txt  GPCRmd_B2AR_nomenclature.xlsx
mdciao/: __init__.py  aa_utils.py  actor_utils.py  bond_utils.py  command_line_tools.py  contact_matrix_utils.py  contacts.py  dihedrals.py  examples.py  filenames.py  fragments.py  list_utils.py  nomenclature_utils.py  parsers.py  plots.py  residue_and_atom_utils.py  sequence_utils.py  sequence_utils_old.py  site_utils.py  str_and_dict_utils.py
mdciao/cli/: __init__.py  cli.py
mdciao/contacts/: __init__.py  _md_compute_contacts.py  _mdtraj.py  _progress.py  contacts.py  contacts_.py
mdciao/examples/: 01.Tutorial.ipynb  02.Missing_Contacts.ipynb  03.Comparing_CGs_Bars.ipynb  04.Comparing_CGs_Flares.ipynb  05.Flareplot_Schemes.ipynb  06.MSA_via_Consensus_Labels.ipynb  07.EGFR_Kinase_Inhibitors.ipynb  08.Manuscript.ipynb  09.Consensus_Labels.ipynb  Comparing_CGs_Bars.ipynb  Comparing_CGs_Flares.ipynb  EGFR_Kinase_Inhibitors.ipynb  Flareplot_Schemes.ipynb  MSA_via_Consensus_Labels.ipynb  Manuscript.ipynb  Missing_Contacts.ipynb  Tutorial.ipynb  __init__.py  _filenames.py  examples.py
mdciao/filenames/: __init__.py  filenames.py
mdciao/flare/: __init__.py  _textutils.py  _utils.py  flare.py  visualize.py
mdciao/fragments/: __init__.py  fragments.py
mdciao/nomenclature/: __init__.py  _md_from_dataframe.py  nomenclature.py
mdciao/pdb/: __init__.py  pdb.py
mdciao/plots/: __init__.py  plots.py
mdciao/sequence/: __init__.py
mdciao/sites/: __init__.py  siteIO.py
mdciao/utils/: COM.py  __init__.py  bonds.py  contact_matrix.py  lists.py  residue_and_atom.py  sequence.py  str_and_dict.py
scripts/: BW_overview.py  CGN_overview.py  compare_neighborhoods.py  contact_maps.py  density_by_sites.py  fragment_overview.py  interface_ctc_analyzer.py  mdc_BW_overview.py  mdc_CGN_overview.py  mdc_GPCR_overview.py  mdc_KLIFS_overview.py  mdc_compare.py  mdc_compare_neighborhoods.py  mdc_examples.py  mdc_fragment_overview.py  mdc_fragments.py  mdc_interface.py  mdc_neighborhoods.py  mdc_notebooks.py  mdc_pdb.py  mdc_residues.py  mdc_sites.py  residue_dihedrals.py  residue_neighborhoods.py  site_figures.py  sites.py
sofi_functions/: Gunnar_utils.py  __init__.py  aa_utils.py  actor_utils.py  bond_utils.py  command_line_tools.py  contacts.py  fragments.py  list_utils.py  nomenclature_utils.py  parsers.py  sequence_utils.py  tested_utils.py
tests/: GPCRmd_B2AR_nomenclature_test.xlsx  filenames.py  input.txt  sofi_tests_by_unittest.py  test_AA.py  test_COM_utils.py  test_bonds.py  test_bonds_utils.py  test_cli.py  test_command_line_tools.py  test_contact_matrix_utils.py  test_contacts.py  test_examples.py  test_flare.py  test_flare_utils.py  test_fragments.py  test_lists.py  test_lists_utils.py  test_nomenclature.py  test_parsers.py  test_pdb.py  test_plots.py  test_residue_and_atom_utils.py  test_scripts.py  test_sequence.py  test_sequence_utils.py  test_siteIO.py  test_site_utils.py  test_str_and_dict_utils.py
tests/data/: CGN_3SN6.txt  GDP.json  GDP_name_XXX.json  GPCRmd_B2AR_nomenclature_test.xlsx  index.ndx
tests/data/bogus_pdb/: 2_3AA_chains_and_two_ligs_monomer.gro  2_3AA_chains_monomer.prmtop
tests/data/examples/: gs-b2ar.noH.stride.20.xtc  gs-b2ar.noH.stride.5.xtc
tests/data/json/: GDP.json  GDP_name_XXX.json  tip.json  tip_consensus.json
tests/data/nomenclature/: GNAS2_HUMAN.txt  GPCRdb_B2AR_nomenclature_test.xlsx  GPCRmd_B2AR_nomenclature_test.xlsx  KLIFS_P31751.xlsx  adrb2_human.xlsx  agrg1_human.xlsx  gnas2_human.xlsx  nomenclature.bib
